[tool.poetry]
name = "eyazis-3"
version = "0.1.0"
description = ""
authors = ["Lapuskin <mikhail.lapkovskiy.2004@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tk = "^0.1.0"
nltk = "^3.9.1"
yake = "^0.4.8"
langdetect = "^1.0.9"
transformers = "^4.47.0"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
